--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,28 @@
-.idea
+# IDEs and Editors
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# OS Data
+.DS_Store
+Thumbs.db
+
+# Python Server
+__pycache__/
+*.py[cod]
+*$py.class
+# Virtual environments
+venv/
+env/
+.env
+
+# Database (SQLite)
+*.db
+chat_app.db
+
+
+# SSL Certificates (Do not commit real keys!)
+*.pem
+*.key
+*.crt
