--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -35,6 +35,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   bcrypt: ^1.1.3
+  encrypt: ^5.0.3
+  shared_preferences: ^2.3.2
+  pointycastle: ^3.9.1
+  basic_utils: ^5.0.0
+
 
 dev_dependencies:
   flutter_test:
